[gd_scene load_steps=3 format=2]

[ext_resource path="res://stuff/turret_stuff/turret.gd" type="Script" id=1]
[ext_resource path="res://ui/turret_tooltip.tscn" type="PackedScene" id=2]

[node name="Turret" type="Node2D"]
script = ExtResource( 1 )

[node name="HoverBox" type="Control" parent="."]
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1
mouse_default_cursor_shape = 16

[node name="EnergyChecker" type="Timer" parent="."]
wait_time = 0.2

[node name="TurretTooltip" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -110.0
margin_top = -80.0
margin_right = 110.0
margin_bottom = -28.0

[connection signal="mouse_entered" from="HoverBox" to="." method="_on_HoverBox_mouse_entered"]
[connection signal="mouse_exited" from="HoverBox" to="." method="_on_HoverBox_mouse_exited"]
[connection signal="timeout" from="EnergyChecker" to="." method="_on_EnergyChecker_timeout"]
